--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js",
+		"start": "nodemon server.js",
 		"devStart": "nodemon server.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"ejs": "^3.0.1",
 		"express": "^4.17.1",
 		"express-ejs-layouts": "^2.5.0",
