--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js",
+		"start": "nodemon server.js",
 		"devStart": "nodemon server.js"
 	},
 	"keywords": [],
@@ -15,7 +15,8 @@
 		"ejs": "^3.0.1",
 		"express": "^4.17.1",
 		"express-ejs-layouts": "^2.5.0",
-		"mongoose": "^5.8.9"
+		"mongoose": "^5.8.9",
+		"multer": "^1.4.2"
 	},
 	"devDependencies": {
 		"dotenv": "^8.2.0",
